Donor: resolve input field smaller than it's container (not visible to the naked eye)

--- a/packages/donor/src/components/basic/Input/Input.module.scss
+++ b/packages/donor/src/components/basic/Input/Input.module.scss
@@ -1,4 +1,7 @@
-.input-container {
-  height: 3rem;
-  margin-bottom: 35px;
+.component {
+  margin-bottom: 2rem;
+}
+
+.input {
+  height: unset !important;
 }
